# OpenGL_UnknownEngine

./: .gitignore  CMakeLists.txt  conanfile.txt
includes/tracy/: .gitignore  CMakeLists.txt
includes/tracy/examples/OpenCLVectorAdd/: CMakeLists.txt
includes/tracy/imgui/misc/freetype/: imgui_freetype.cpp
shaders/: colors.frag  colors.vert  font.frag  font.vert  light_source.frag  simple.frag  simple.vert  sprite.frag  sprite.vert  world.frag  world.vert
src/: ArrayTexture.cpp  ArrayTexture.hpp  Camera.cpp  Camera.hpp  Command.h  Cube.cpp  Cube.hpp  CubeRenderer.cpp  CubeRenderer.hpp  INoiseGenerator.cpp  INoiseGenerator.hpp  Light.hpp  NoiseGenerator.cpp  NoiseGenerator.h  QuadRenderer.cpp  QuadRenderer.h  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SpatialMap.hpp  SpriteRenderer.cpp  Texture.cpp  Texture.hpp  TextureArray.cpp  TextureArray.hpp  Tile.h  Types.hpp  Window.cpp  Window.hpp  World.cpp  World.h  WorldRenderer.h  main.cpp  resource.h
src/Renderers/: CubeRenderer.hpp  QuadRenderer.cpp  QuadRenderer.h  SpriteRenderer.h  WorldRenderer.cpp
src/generation/: INoiseGenerator.cpp  NoiseGenerator.cpp  NoiseGenerator.h
src/graphics/: ArrayTexture.cpp  ArrayTexture.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/infrastructure/: ResourceManager.cpp  ResourceManager.h
src/renderers/: EntityRenderer.cpp  EntityRenderer.h  FontRenderer.cpp  FontRenderer.h  QuadRenderer.cpp  QuadRenderer.h  WorldRenderer.cpp  WorldRenderer.h
src/scene/: Camera.cpp  Entity.h  Light.h  Person.h  Tile.cpp  Tile.h  Window.cpp  Window.h  World.cpp  World.h
src/utils/: PlaceCommand.cpp  PlaceCommand.h  Random.cpp  Random.h  TileType.h  Timer.h  Types.hpp
